# browser

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: settings.yaml  styles.yaml
src/: browser.cpp  browser.h  main.cpp  styles.h
src/appearance/: draw.cpp  styles.h
src/components/: floatingInput.cpp  floatingInput.h
src/events/: base.cpp  eventHandler.cpp  keybinds.cpp  keybinds.h  performCommand.cpp  tabManagement.cpp
src/state/: deserializeKeybinds.cpp  state.cpp  styles.cpp  tabs.cpp  workspaces.cpp
